
			* fix instant search (begin edit, end edit mess)..
			* rename of "dirty" view, does not carry changes.
			* rename of view, does not carry undo/redo history.
			* reveal on windows on a folder, will open the folder, not reveal the folder.
			* fix.. reveal does not work with "," in path names
			* fix.. a project folder can't be removed via context menu if the project was not saved.

		TODO

				* Use a real clipboard integrated with the OS
				* fix canary
				* copy and paste in background
				* copy image cant' copy image sizes
	.1

		BUGS FIXED

				* remove some obsolete code
				* refactor some functions
				* solve encoding mess
				* Fix for when packages_path is a link
				* fix open with..
				* copy url commmand
				* exclude from project
				* promote as project folder
				* no value on browser will use default browser
				* statusbar functions fixes
				* fix open/run command windows
				* hide default menus

		IMPROVEMENTS

				* for each window, locate the focused tab in sidebar at startup
				* Lazy load sendtotrash, desktop.
				* 2nd fix #92
				* improves open in new window commmand

		TODO

				* Use a real clipboard integrated with the OS
				* fix canary
				* fix.. reveal does not work with "," in path names
				* copy and paste in background
				* fix instant search (begin edit, end edit mess)..
				* copy image cant' copy image sizes

	.0

		## Shorcuts collisioning with Sublime2's built-in shortcuts have been removed.

		If you miss these

			- Go to "Preferences" -> "Browse Packages" -> "User"
			- Open or create file "Default.sublime-keymap"

			- Add this content:

					, { "keys": ["ctrl+t"], "command": "side_bar_new_file2" },
					{ "keys": ["f2"], "command": "side_bar_rename" },
					{ "keys": ["ctrl+alt+f"], "command": "side_bar_find_files_path_containing" }


		## If you have problems configuring F12 key

			- https://github.com/titoBouzout/SideBarEnhancements#f12-key


	Previous ST3 version change:

